--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@headlessui/vue": "^1.7.19",
+    "@heroicons/vue": "^2.1.1",
     "autoprefixer": "^10.4.18",
     "postcss": "^8.4.36",
     "tailwindcss": "^3.4.1",
