--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@headlessui/vue": "^1.7.19",
     "@heroicons/vue": "^2.1.1",
     "autoprefixer": "^10.4.18",
+    "clsx": "^2.1.0",
     "postcss": "^8.4.36",
     "tailwindcss": "^3.4.1",
     "vue": "^3.4.21",
