--- a/package.json
+++ b/package.json
@@ -15,12 +15,17 @@
   "dependencies": {
     "@headlessui/vue": "^1.7.19",
     "@heroicons/vue": "^2.1.1",
+    "@vueuse/core": "^10.9.0",
     "autoprefixer": "^10.4.18",
     "clsx": "^2.1.0",
+    "dnd-core": "^16.0.1",
+    "pinia": "^2.1.7",
     "postcss": "^8.4.36",
+    "react-dnd-html5-backend": "^16.0.1",
     "tailwindcss": "^3.4.1",
     "vue": "^3.4.21",
-    "vue-router": "^4.3.0"
+    "vue-router": "^4.3.0",
+    "vue3-dnd": "^2.1.0"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.3.3",
